XWIKI-14162: Position Save buttons on a fixed-bottom area
* Make the buttons sticky only where needed
* Refresh the sticky buttons position when switching a category from the
  profile preferences
* Align the elements of the sticky bar
* Hide some elements of the sitcky bar when too small

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/edit.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/edit.less
@@ -2,34 +2,50 @@
 // Edit
 // --------------------------------------------------
 
-
-.bottombuttons {
+.stickybuttons {
   background-color: @xwiki-page-content-bg;
   .buttons {
     margin: 0;
     padding: 1em;
   }
 
-  &.bottombuttons-fixed {
+  &.stickybuttons-fixed {
     z-index: 100;
     position: fixed;
     bottom: 0;
     background-color: @breadcrumb-bg;
+    @media (max-width: @screen-md-min) {
+      #commentinput, #autosaveControl, .metamodifs {
+        display: none;
+      }
+    }
+  }
+
+  input {
+    vertical-align: middle;
+    position: relative;
+    margin: 0;
+    bottom: 1px;
   }
 }
 
 .bottom-editor {
-  border: 1px solid @input-border;
-  border-top: 0;
-  .bottombuttons {
+  .stickybuttons {
+    border: 1px solid @input-border;
+    border-top: 0;
     background-color: @xwiki-background-secondary-color;
-    &.bottombuttons-fixed {
+    &.stickybuttons-fixed {
       border-top: 1px solid @input-border;
     }
   }
 }
 
 #editcolumn, #inline {
+  :not(.stickybuttons).bottombuttons {
+    .buttons {
+      margin: 10px 0;
+    }
+  }
   .edit-meta-tools {
     .pull-right();
     margin: @breadcrumb-padding-vertical @breadcrumb-padding-horizontal 0 0;
